Fixed images being squishy

--- a/src/assets/toolkit/styles/elements/_images.scss
+++ b/src/assets/toolkit/styles/elements/_images.scss
@@ -1,4 +1,5 @@
 img {
-  width: 100%;
+  height: auto;
   max-width: 100%;
+  width: 100%;
 }
